2007-10-17  Tassilo Horn  <tassilo@member.fsf.org>

	* bindings.el (completion-ignored-extensions): Remove pdf and dvi
	extensions since they can be viewed with doc-view.

	* files.el (auto-mode-alist): Make doc-view-mode the default mode
	for pdf, ps and dvi files.

	* doc-view.el: Make doc-view-mode the standard mode for viewing
	pdf, [e]ps and dvi files and add binding C-c C-c to toggle between
	text and image display.  Add binding C-c C-e to switch to an
	editing mode.
	(doc-view-ghostscript-options, doc-view-ps->pdf): Add "-dSAFER" to
	avoid security problems when rendering files untrusted sources.

2007-10-17  Aaron Hawley  <aaronh@garden.org>

	* tutorial.el (tutorial--save-tutorial): Display message when tutorial
	position is not saved.

2007-10-17  Reiner Steib  <Reiner.Steib@gmx.de>

	* doc-view.el: Mention xpdf.  Fix spelling of Ghostscript.
	(doc-view-ghostscript-options): Fix typo in doc string.

2007-10-17  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/compile.el (compilation-next-error-function): Fix timestamp
	handling, so compilation-fake-loc works again.

	* server.el (server-select-display): Nop if we do not support m-f-o-d.
	(server-process-filter): Revert last change.

	* vc.el (vc-diff-sentinel, vc-diff-internal): Revert some change in the
	behavior unrelated to filesets.

2007-10-17  Chong Yidong  <cyd@stupidchicken.com>

	* longlines.el (longlines-wrap-follows-window-size): Integer value
	specifies wrapping margin.
	(longlines-mode, longlines-window-change-function):
	Set window-specific wrapping margin based on the above.

2007-10-17  John Wiegley  <johnw@newartisans.com>

	* eshell/esh-cmd.el (eshell-complex-commands): Add "ls".

2007-10-17  Dan Nicolaescu  <dann@ics.uci.edu>

	* server.el (server-process-filter): Only set display if X11 is
	supported.

2007-10-17  Glenn Morris  <rgm@gnu.org>

	* progmodes/cc-menus.el (cc-imenu-c++-generic-expression):
	Tweak regexp to avoid stack overflow.
